--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,24 @@ body {
     padding: 0;
 }
 
+img,
+picture,
+video,
+canvas,
+svg {
+    display: block;
+    max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+    font: inherit;
+}
+
 textarea {
     resize: none;
-    height: 10rem;
 }
 
 button {
